--- a/ai-agent-internal-documentation/docs_agent/src/docs_agent/config/tasks.yaml
+++ b/ai-agent-internal-documentation/docs_agent/src/docs_agent/config/tasks.yaml
@@ -1,17 +1,9 @@
-research_task:
+answer_question_task:
   description: >
-    Conduct a thorough research about {topic}
-    Make sure you find any interesting and relevant information given
-    the current year is {current_year}.
-  expected_output: >
-    A list with 10 bullet points of the most relevant information about {topic}
-  agent: researcher
+    Answer the user question with the most relevant information from the context and available knowledge sources.
+    Question: {question}
 
-reporting_task:
-  description: >
-    Review the context you got and expand each topic into a full section for a report.
-    Make sure the report is detailed and contains any and all relevant information.
+    Do not answer questions that are not related to the context or knowledge sources.
   expected_output: >
-    A fully fledged report with the main topics, each with a full section of information.
-    Formatted as markdown without '```'
-  agent: reporting_analyst
+    Best answer to the user question
+  agent: meta_quest_expert
